refactor: `ProductService`
- refactored `verifyStocks`
- refactored `getAllProductsByListOfIds`